fix spacing

--- a/src/components/main-section/styles.scss
+++ b/src/components/main-section/styles.scss
@@ -4,6 +4,6 @@
 .main-section {
     width: $mainWidth;
     height: $bodyHeight;
-    padding-right: 15px;
+    padding-right: 10px;
     border-right: 2px solid $light-grey;
 }
